# imx_app

01-lvgl/: Makefile  lv_conf.h
01-lvgl/01-lvgl/: lv_conf.h  lv_drv_conf.h  main.c
01-lvgl/01-lvgl/lv_drivers/indev/: evdev.c
01-lvgl/01-lvgl/lvgl_ui/: ap3216c.c  datafile.h  lvgl_ui.c  lvgl_ui.mk  network.c
01-lvgl/02-lvgl/: Makefile  lv_conf.h  main.c
01-lvgl/02-lvgl/lv_drivers/indev/: evdev.c  evdev.h
01-lvgl/02-lvgl/lvgl_ui/: datafile.h  lvgl_ui.c  lvgl_ui.h
01-lvgl/lvgl_ui/: lvgl_ui.c
02-socket/: 1. 网络数据的转换.md  2.服务端-客户端 一对一.md  CMakeLists.txt
02-socket/include/: datafile.h  lcd.h  led.h  main.h
02-socket/src/: lcd.c  lcd_fun.c  led.c  main.c
03-input/: CMakeLists.txt  keyinput.md  tsinput.md  tslibAPI.md  tslibAPP-1.md  tslibAPP-2.md
03-input/include/: datafile.h  decode_input_event.h
03-input/src/: decode_input_event.c  main.c
04-rgblcd/: CMakeLists.txt  png.md
04-rgblcd/include/: datafile.h  freetype_fun.h  jpeg_fun.h  png_fun.h
04-rgblcd/src/: freetype_fun.c  jpeg_fun.c  lcd_fun.c  main.c  png_fun.c
05-v4l2/: CMakeLists.txt  V4L2.md  jpeg.md  mmap & munmap.md  v4l2.c
05-v4l2/include/: datafile.h  freetype_fun.h  png_fun.h  v4l2_ov5640.h
05-v4l2/src/: freetype_fun.c  main.c  png_fun.c  v4l2_ov5640.c
99-mqtt/: CMakeLists.txt
99-mqtt/include/: datafile.h
99-mqtt/src/: main.c
file_io/: CMakeLists.txt  data.csv
file_io/src/: main.c
lcd/: test  test.c
led/: led  led.c
linux_c/: CMakeLists.txt  信号接收.md  信号集与信号掩码.md  线程.md
linux_c/file_io/: CMakeLists.txt  data.csv  result.csv
linux_c/file_io/src/: main.c
linux_c/io/: 1_非阻塞IO.md  2_select().md  3_poll().md  4_epoll.md  CMakeLists.txt
linux_c/io/include/: datafile.h
linux_c/io/src/: main.c
linux_c/pthread/: 1_线程.md  1_线程创建-删除-取消.md  2_线程同步问题.md  3_信号量.md  CMakeLists.txt
linux_c/pthread/include/: datafile.h  gpio.h  led.h  main.h  uart.h
linux_c/pthread/src/: gpio.c  lcd.c  lcd_fun.c  led.c  main.c  uart.c
linux_c/signal/: test  test.c  信号发送.md  信号实时.md  信号接收.md  信号相关函数.md  信号集与信号掩码.md  线程.md  进程间通信.md
linux_c/signal/src/: main.c
linux_c/socket/: 1. 网络数据的转换.md  2.服务端-客户端 一对一.md  CMakeLists.txt
linux_c/socket/include/: datafile.h  lcd.h
linux_c/socket/src/: main.c
linux_c/src/: main.c
lvgl_app/: Makefile  lv_conf.h  lv_drv_conf.h  main.c
lvgl_app/lvgl/demos/widgets/: lv_demo_widgets.c
makefile/: Makefile  add.c  add.h  hello.c  hello.h  main  main.c
makefile/include/: add.h  hello.h
makefile/src/: add.c  hello.c  main.c
